[package]
name = "wed"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cuducos/wed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
home = "0.5.9"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
clippy = "0.0.302"
tempdir = "0.3.7"
