[package]
name = "wed"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/cuducos/wed"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
home = "0.5.11"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempdir = "0.3.7"
